--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/LamarreLeo/Devoir-API-Port/issues"
   },
-  "homepage": "https://github.com/LamarreLeo/Devoir-API-Port#readme"
+  "homepage": "https://github.com/LamarreLeo/Devoir-API-Port#readme",
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.2",
+    "express-session": "^1.18.2",
+    "jsdoc": "^4.0.4"
+  }
 }
