--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsdoc": "^4.0.4"
   }
