Ajout du validator a la route POST /catways

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "jsdoc": "^4.0.4",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0"
