--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "jsdoc": "^4.0.4",
+    "method-override": "^3.0.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0"
   }
